fix input responsiveness issue && user message boxs triangle visibility problem

--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -29,7 +29,7 @@
 }
 
 .text::before {
-  width: 12px;
+  width: 13px;
   height: 12px;
   background-color: #0066CC;
   position: absolute;
