--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -7,6 +7,13 @@
     column-gap: 12px;
 }
 
+.inputAndButtonContainer > div:first-child {
+    max-width: 372px;
+    width: 100%;
+    /* display: flex;
+    column-gap: 12px; */
+}
+
 .error {
     color: red;
     font-family: Montserrat;
@@ -17,6 +24,7 @@
 }
 
 .input {
+    width: 100%;
     height: 36px;
     border: 1px solid #D1D1D1;
     border-radius: 5px;
@@ -25,7 +33,6 @@
     font-weight: 500;
     line-height: 19.5px;
     padding: 8px 12px;
-    min-width: 372px;
 }
 
 .input:focus {
@@ -48,6 +55,7 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 20px;
+    flex: 0 0 auto;
 }
 
 .button:focus {
